# personal_ai

./: Cargo.toml  README.md  package-lock.json  package.json
src/: ai.rs  lib.rs  main.rs  search.js  search.rs
src/ai/: classifiers.rs
