[package]
name = "personal_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.7.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["full"] }
urlencoding = "2.1.3"
